--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
  
      <main>
          <section id="groom-bride-name">
-             <h2 class="font-imperial-script">Rahul with Preeti</h2>
+             <h2 class="font-imperial-script">Rahul with Radha</h2>
          </section>
  
          <section id="groom-bride-illustration">
@@ -66,6 +66,7 @@
      </footer>
  </body>
  </html>
+
 
 
 
